prototype_madison: mijor alignment fix

--- a/prototype_madison/modules/offeroftheweek/offeroftheweek.css
+++ b/prototype_madison/modules/offeroftheweek/offeroftheweek.css
@@ -3,7 +3,7 @@
     height: 115px;
 }
 .mod-gallery .mod-offeroftheweek .pod {
-    margin: 3px 15px 8px 3px;
+    margin: 1px 15px 8px 3px;
     position: static;
 }
 .mod-offeroftheweek .pod .circle {
